--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang='en'>
   <head>
+  	<title>Dipesh G</title>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
   </head>
   <body>
-Hello, my name is Dipesh
+<h1>Hello, my name is Dipesh</h1>
+<ul>
+<li>test 1</li>
+<li>test 2</li>
+</ul>
   </body>
 </html>
